# lobs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  lobs.code-workspace  pyproject.toml
.github/workflows/: pypi-builder.yml
build_tests/cmake-single-app/: CMakeLists2.txt  cmake-single-app.py
build_tests/cmake-single-app/src/: main.cpp
src/lobs/: __init__.py  __main__.py
src/lobs/_machinery/: modules.py
src/lobs/core/: configuration.py  exporter.py  module.py  package.py  project.py  version.py
src/lobs/core/language/: base.py
src/lobs/domains/cpp/: __init__.py  compiler_options.py  project.py
src/lobs/exporter/: __init__.py  cmake.py  cmake_syntax.py  esp_idf.py
src/lobs/exporter/cmake/: __init__.py  exporter.py  syntax.py  writer.py
tests/: __init__.py  test_version.py
