[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lobs"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Ricardo Marchesan", email = "ricardo@azevem.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click >= 8.3.0",
]

[project.urls]
Documentation = "https://github.com/rikardonm/lobs#readme"
Issues = "https://github.com/rikardonm/lobs/issues"
Source = "https://github.com/rikardonm/lobs"

[project.scripts]
lobs = "lobs.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lobs/version.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lobs tests}"

[tool.coverage.run]
source_pkgs = ["lobs", "tests"]
branch = true
parallel = true
omit = [
  "src/lobs/version.py",
]

[tool.coverage.paths]
lobs = ["src/lobs", "*/lobs/src/lobs"]
tests = ["tests", "*/lobs/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
